--- a/.github/workflows/Compile.yml
+++ b/.github/workflows/Compile.yml
@@ -14,7 +14,13 @@ jobs:
     steps:
     
 
+    - name: Install dependencies
+      run: |
+        apk add build-base git zip
+
     - uses: actions/checkout@v2
+    - run: |
+        git fetch --prune --unshallow
 
    
 
